feat: Spring Data JPA, MySQL 연동 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,22 @@
-spring.application.name=my-first-spring-project
-server.port=9000
+# 1. 서버 포트 설정 (기존)
+server.port = 9000
+
+# 2. MySQL 데이터베이스 연결 정보 (오늘의 핵심)
+spring.datasource.url=jdbc:mysql://localhost:3306/spring?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+# ❗️본인이 MySQL 설치 시 설정한 비밀번호를 입력하세요. (없으면 비워두세요)
+spring.datasource.password=password
+
+# 3. JPA (Hibernate) 관련 설정
+# true로 설정하면, Spring이 실행될 때 SQL 쿼리를 콘솔에 보여줍니다. (개발 시 유용!)
+spring.jpa.show-sql=true
+
+# DDL(Data Definition Language) 자동 생성 전략
+# create: 애플리케이션 실행 시점에 기존 테이블을 '삭제'하고 '새로 생성' (개발용)
+# update: 변경된 부분만 감지해서 스키마를 '업데이트' (개발용)
+# validate: 스키마가 올바른지 '검증'만 함 (운영용)
+# none: 아무것도 하지 않음 (운영용)
+spring.jpa.hibernate.ddl-auto=create
+
+# (선택) SQL 포맷을 예쁘게 정렬해줍니다.
+spring.jpa.properties.hibernate.format_sql=true
